<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">The Movie Show</string>
    <string name="tvPoster">Poster</string>
    <string name="tvBanner">Banner</string>
    <string name="tvAppVersion">1.0</string>
    <string name="tvTrending">Trending</string>
    <string name="tvMovies">Movies</string>
    <string name="tvShows">TV Shows</string>
    <string name="tvTitle">Title</string>
    <string name="tvRating">Rating</string>
    <string name="tvRatingDesc">%s/10 (%s votes)</string>
    <string name="tvNetwork">Network</string>
    <string name="tvNetworkDesc">%1$s (%2$s)</string>
    <string name="tvReleaseDate">Release Date</string>
    <string name="tvReleasedOn">Released on:</string>
    <string name="tvStartedOn">Started on:</string>
    <string name="tvStatus">Release status: </string>
    <string name="tvLanguage">Language</string>
    <string name="tvBullet">\u2022</string>
    <string name="tvAgeRating">Age Rating</string>
    <string name="tvAllAges">All Ages - G</string>
    <string name="tvTeens">Teens - 13+</string>
    <string name="tvMatureTeens">Teens - 17+</string>
    <string name="tvAdults">Adults - 21+</string>
    <string name="tvRuntime">Runtime</string>
    <string name="tvProducedBy">Produced Companies</string>
    <string name="tvGenre">Genre(s)</string>
    <string name="tvEpisodes">Episodes</string>
    <string name="tvEpsDesc">%1$s %2$s</string>
    <string name="tvEps">Eps</string>
    <string name="tvOtherMenus">Other Menus</string>
    <string name="tvShare">Share</string>
    <string name="tvOpenInBrowser">Open in browser</string>
    <string name="tvReadMore">Show More</string>
    <string name="tvReadLess">Show Less</string>
    <string name="tvDiscoverMovie">Explore Movies</string>
    <string name="tvDiscoverTvShows">Explore TV Shows</string>
    <string name="tvDiscover">Discover</string>
    <string name="tvTrailer">Trailer Video</string>
    <string name="tvOverview">Overview</string>
    <string name="tvCast">Cast</string>
    <string name="tvDeveloper">Developer</string>
    <string name="tvApplication">Application</string>
    <string name="tvUpdate">Update</string>
    <string name="tvSearch">Search…</string>
    <string name="tvNoSearchMovie">Oops!. You Haven\'t Searched for a Movie…</string>
    <string name="tvSearchMovie">Search for your favorite movie to see the results</string>
    <string name="tvNoSearchTvShow">Oops!. You Haven\'t Searched for a TV Show…</string>
    <string name="tvSearchTvShow">Search for your favorite TV show to see the results</string>
    <string name="tvReviews">Reviews</string>
    <string name="tvSimilarMovie">Similar Movies</string>
    <string name="tvSimilarTvShows">Similar TV Shows</string>
    <string name="tvRuntimeInTime">%dh %dm</string>
    <string name="tvNoOverview">No overview available</string>
    <string name="tvNoCast">No cast information available</string>
    <string name="tvNoReviews">No reviews available</string>
    <string name="tvNoSimilarMovie">No similar movies available</string>
    <string name="tvNoSimilarTvShows">No similar TV shows available</string>
    <string name="tvNoVideo">No trailer video available</string>
    <string name="tvNA">N/A</string>
    <string name="tvNoFavoriteMovie">Oops! No favorite movies found…</string>
    <string name="tvNoFavoriteTvShow">Oops! No favorite TV shows found…</string>
    <string name="tvSaveFavoriteMovie">Your favorite movies will appear here</string>
    <string name="tvSaveFavoriteTvShows">You favorite TV shows will appear here</string>
    <string name="tvOopsNoResults">Oops! No results found…</string>
    <string name="tvNoSearchData">No results found for this query. Please use another query.</string>
    <string name="tvShareWith">Share with:</string>
    <string name="tvOops">Oops! Something went wrong…</string>
    <string name="tvUnableLoadData">Unable to load data. Please try again.</string>
    <string name="tvVisitMovie">Check out this awesome movie\n</string>
    <string name="tvVisitTvShow">Check out this awesome TV show\n</string>
    <string name="tvNameCharacter">%s \n (%s)</string>
    <string name="tvInstallBrowserYouTube">Please install a browser or the YouTube app first.\nError: %s</string>
    <string name="tvPressBackExit">Press back again to exit the app</string>
    <string name="tvOpenWith">Open with</string>
    <string name="tvNoHandleApp">No app can handle this link.</string>
    <string name="tvInstallBrowser">Please install a browser first.\nError: %s</string>
    <string name="tvSendTo">Send to</string>
    <string name="tvInstallEmailApp">Please install an email app first</string>
    <string name="tvZero">0</string>
    <string name="tvWarning">Warning</string>
    <string name="tvWarningTeens">This film may not be suitable for children under 13. Parental guidance is strongly advised as it may include mild violence, suggestive themes, or other content that requires discretion.</string>
    <string name="tvWarningMatureTeens">This film is intended for viewers aged 17 and above. It may contain intense violence, sexual content, or strong language, and is not suitable for younger audiences.</string>
    <string name="tvWarningAdults">This film is intended for audiences aged 21 and over. It contains adult content, violence, or sensitive themes that are not suitable for minors.</string>
    <string name="tvUnderstand">I Understand</string>

    <!--Tab menu title-->
    <string name="tvMovieNowPlaying">Now Playing</string>
    <string name="tvMovieUpcoming">Upcoming</string>
    <string name="tvTvShowPopular">Popular</string>
    <string name="tvTvShowAiringToday">Airing Today</string>

    <!--Bottom nav menu-->
    <string name="icTrending">Trending</string>
    <string name="icMovies">Movies</string>
    <string name="icTVShows">TV Shows</string>
    <string name="icFavorite">Favorite</string>
    <string name="icAbout">About</string>

    <!--About-->
    <string name="tvTitleLetsGreet">Let\'s greet</string>
    <string name="tvDescLetsGreet">Taufik Hidayat</string>
    <string name="tvTitleForkOnGithub">Fork on Github</string>
    <string name="tvDescForkOnGithub">Fork this app on Github</string>
    <string name="tvTitleSendEmail">Send an email</string>
    <string name="tvDescSendEmail">yumtaufikhidayat@gmail.com</string>
    <string name="tvDescLanguage">Select Language</string>
    <string name="tvTitleCopyright">Copyright</string>
    <string name="tvDescCopyright">&#169; 2021–2025 Taufik Hidayat</string>
    <string name="tvTitleVersion">Version</string>
    <string name="tvTitleRateThisApp">Rate this app</string>
    <string name="tvDescRateThisApp">Enjoying the app? Give it 5 stars!</string>
    <string name="tvTitleReportIssue">Report an issue</string>
    <string name="tvDescReportIssue">Encountered an issue related to app? Report it here</string>

    <!--Sort & Filtering-->
    <string name="tvSortFilter">Sort &amp; Filter</string>
    <string name="tvSortAll">All</string>
    <string name="tvSortRelease">Release</string>
    <string name="tvSortTitle">Title</string>
    
    <!--Language-->
    <string name="tvLanguageIndonesia">Indonesia (ID)</string>"
    <string name="tvLanguageEnglish">English (EN)</string>"
    <string name="tvSuccesfullyChangedLanguage">Successfully Changed Language</string>

    <!--Action-->
    <string name="action_added_to_favorite">Added to favorites</string>
    <string name="action_removed_from_favorite">Removed from favorites</string>
    <string name="action_retry">Retry</string>
</resources>