<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_trending"
        android:icon="@drawable/nav_trending_selector"
        android:title="@string/icTrending"/>

    <item android:id="@+id/nav_movie"
        android:icon="@drawable/nav_movie_selector"
        android:title="@string/icMovies"/>

    <item android:id="@+id/nav_tv_show"
        android:icon="@drawable/nav_tv_show_selector"
        android:title="@string/icTVShows"/>

    <item android:id="@+id/nav_favorite"
        android:icon="@drawable/nav_favorite_selector"
        android:title="@string/icFavorite"/>

    <item android:id="@+id/nav_about"
        android:icon="@drawable/nav_about_selector"
        android:title="@string/icAbout"/>

</menu>