<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvImagePoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgPoster"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:background="@drawable/ic_loading"
                tools:ignore="ContentDescription"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="30dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/cvImagePoster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cvImagePoster"
            tools:text="@string/tvTitle"/>

        <TextView
            android:id="@+id/tvReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="14sp"
            android:textColor="@color/colorGrey"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            android:text="@string/tvReleaseDate"/>

        <ImageView
            android:id="@+id/imgRate"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="@id/tvReleaseDate"
            app:layout_constraintTop_toBottomOf="@id/tvReleaseDate"
            android:src="@drawable/ic_rate"/>

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="start"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/tvRating"
            app:layout_constraintStart_toEndOf="@id/imgRate"
            app:layout_constraintTop_toTopOf="@id/imgRate"
            app:layout_constraintBottom_toBottomOf="@id/imgRate"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>